2010-05-23  Kentaro Sato <kentaro@ranvis.com>

	* timidity/readmidi.c, timidity/reverb.[ch]:
	  Fix ch_3tap_delay crash.

2010-05-17  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/readmidi.c: Allow Device Numbers other than 0x10 for
	  XG SYSTEM ON SYSEX events.
	* timidity/mix.c: Fix existing anti-popping minimum volume ramps
	  for expression, volume, pans, etc.
	  Extend anti-popping minimum volume ramps to envelope amp changes.

2009-12-23  Yair K. <cesium2@gmail.com>

	* timidity/sun_a.c (acntl):
	  Fix for message PM_REQ_GETQSIZ, PM_REQ_GETFRAGSIZ.

2009-12-19  Kentaro Sato <kentaro@ranvis.com>

	* timidity/readmidi.c: Fixed crash when loading long music.
	* timidity/output.[ch], timidity/timidity.c:
	  Fixed corruption of the default device encoding on some occasion.
	* timidity/output.[ch], timidity/w32_a.c:
	  Fixed Windows audio driver 24-bit output.
	* interface/w32g_syn.c: Better tray icon removal.

2009-10-04  Kentaro Sato <kentaro@ranvis.com>

	* doc/C/timidity.1, doc/ja_JP.eucJP/timidity.1,
	  timidity/reverb.[ch], timidity/timidity.c:
	  Added Freeverb parameter options to --reverb.
	* timidity/freq.c, timidity/sndfont.c:
	  Reduced warnings.

2009-03-16  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/readmidi.c (gloom_list):
	  Fix for GM2 drumch on program change
	* timidity/playmidi.c (midi_drumpart_change): Beautify

2009-03-15  Kentaro Sato <kentaro@ranvis.com>

	* timidity/miditrace.c:
	  Fix for Mac sound spectrum being out of sync in trace mode.
	* timidity/reverb.c:
	  Revert r1.69 change for panning delay that caused off-by-one.

2009-03-15  Kentaro Sato <kentaro@ranvis.com>

	* interface/w32g_c.c: Display errors reported on startup.
	* interface/w32g_utl.c: Add configuration fallbacks.
	* timidity/midi_a.c: Remove unused local variables.
	* timidity/sndfont.c:
	  CFG_FOR_SF_SUPPORT_FFT can be externally defined. (cfgforsf)

2009-03-04  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* interface/ncurs_c.c, timidity/readmidi.c: